Bug 445477 - Displayed font does not immediately change to match new selected font.
Summary: Displayed font does not immediately change to match new selected font.
Status: RESOLVED FIXED
Alias: None
Product: kcharselect
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
: 449761 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-11-14 12:50 UTC by griffiths_andy
Modified: 2022-02-26 16:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.92
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description griffiths_andy 2021-11-14 12:50:20 UTC
SUMMARY
When a new font is selected, the example for the chosen code points does not immediately update to match the selected font. This leads to interesting behaviour eg:

From any font, select Comic Sans MS. The example remains as per the previous font. Select Courier New, and the example changes to Comic Sans MS. Select Comic Sans MS, and the example display changes to Courier New. And so on...

It seems a change of font from the dropdown is not triggering a redraw event.

However....

Front any font, select Comic Sans MS *and* vary the font size, then the example redraws in Comic Sans MS at the new font size. Select Courier New and vary font size, and again the example redraws.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Archlinux
(available in About System)
KDE Plasma Version: 5.23.1
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-02-26 14:01:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/119
Comment 2 Behzad A 2022-02-26 14:02:34 UTC
*** Bug 449761 has been marked as a duplicate of this bug. ***
Comment 3 Behzad A 2022-02-26 16:33:11 UTC
Git commit b3156f71663bca5ab59e9d9acb5c8e4eceb81a22 by Behzad Alirezaei.
Committed on 26/02/2022 at 15:54.
Pushed by ahmadsamir into branch 'master'.

KCharSelect: connect to the appropriate QFontComboBox signal
FIXED-IN: 5.92

M  +1    -1    src/kcharselect.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/commit/b3156f71663bca5ab59e9d9acb5c8e4eceb81a22