KCharSelect: connect to the appropriate QFontComboBox signal

BUG: 445477
FIXED-IN: 5.92